# codex_librarian

./: .dockerignore  .env.example  .env.test.example  .gitignore  .monitor_state.json  .pre-commit-config.yaml  .reviewed_commits  BACKLOG.md  CLAUDE.md  DONE.md  PDF_FIXES_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  README.md  alembic.ini  docker-compose.redis.yml  pyproject.toml  pytest.ini  redis.conf  requirements_cpu_backup.txt  resolution_log.md  review_notes.md  test_security_implementation.py
.claude/: PROJECT_CONTEXT.md  QUICK_REFERENCE.md  README.md
.claude/agents/: architecture-validator.md  celery-specialist.md  database-admin.md  embedding-specialist.md  fastapi-specialist.md  integration-coordinator.md  mineru-specialist.md  monitoring-specialist.md  performance-optimizer.md  search-engineer.md  security-auditor.md  test-orchestrator.md  watchdog-specialist.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_pgvector_indexes.py  003_advanced_vector_indexes.py  004_security_constraints_performance.py  005_add_path_mappings.py  006_add_server_configuration.py  007_fix_embedding_dimensions_add_tracking.py  008_add_content_uniqueness_fix_tracking.py
blueprint/: ARCHITECTURE.md  FEATURE_MCP_SEMANTIC_SEARCH.md  TESTING_PROGRESS.md  resolution_log.md
docs/: MCP_SETUP.md
docs/source/: advanced_usage.md  conf.py  config.md  index.md  quick_start.md
docs/source/apidocs/: index.rst
examples/: README.md  basic_database_usage.py  complete_api_usage.py  embedding_usage.py  file_watcher_demo.py  manual_processing.py  mineru_demo.py  watch_and_mirror.py
scripts/: batch_process_pdfs.py  celery_monitor.py  check_services.sh  check_watch_status.sh  cleanup_test_database.sh  cleanup_watch_test.sh  demo_watcher.py  deploy_multi_instance.sh  disable_competing_services.sh  export_markdown_files.py  gpu_optimization_report.py  init_database.sh  monitor_gpu.py  quick_health_check.sh  restart_services.sh  rollback_to_single_instance.sh  run_celery_worker.py  run_e2e_tests.sh  run_file_watcher.py  run_watcher.py  setup.sh  setup_test_database.sh  simple_watcher_demo.py  start_mineru_gpu_service.sh  start_watch_test.sh  start_worker_services.sh  stop_services.sh  stop_watch_test.sh  stop_worker_services.sh  system_diagnostic.py  test_integration.sh  test_unit.sh  trigger_config_reload.sh  truncate_database.py  validate_test_env.sh  view_logs.sh  watch_activity.sh
scripts/setup/: verify_gpu_complete.sh  verify_gpu_setup.sh
src/: __init__.py
src/pdf_to_markdown_mcp/: __init__.py  config.py  main.py
src/pdf_to_markdown_mcp/api/: __init__.py  config.py  convert.py  health.py  search.py  status.py  streaming.py  versioning.py
src/pdf_to_markdown_mcp/api/v1/: __init__.py
src/pdf_to_markdown_mcp/auth/: __init__.py  security.py
src/pdf_to_markdown_mcp/core/: __init__.py  chunker.py  circuit_breaker.py  configuration_monitor.py  dependencies.py  errors.py  exceptions.py  mirror.py  monitoring.py  performance.py  processor.py  search_engine.py  streaming.py  task_queue.py  watcher.py  watcher_service.py
src/pdf_to_markdown_mcp/db/: __init__.py  async_session.py  models.py  queries.py  session.py  utils.py
src/pdf_to_markdown_mcp/mcp/: __init__.py  __main__.py  config.py  context.py  server.py
src/pdf_to_markdown_mcp/middleware/: __init__.py  security.py
src/pdf_to_markdown_mcp/models/: __init__.py  document.py  dto.py  processing.py  request.py  response.py
src/pdf_to_markdown_mcp/services/: __init__.py  batch_writer.py  config_service.py  database.py  embeddings.py  mineru.py  mineru_client.py  mineru_pool.py  mineru_standalone.py
src/pdf_to_markdown_mcp/utils/: gpu_utils.py
src/pdf_to_markdown_mcp/worker/: __init__.py  celery.py  embedding_indexer.py  gpu_manager.py  indexer.py  tasks.py
systemd/: mineru-gpu-pool.service  mineru-gpu-service-0.service  mineru-gpu-service-1.service  mineru-gpu-service-2.service
tests/: README.md  conftest.py  integration_conftest.py  pytest.ini
tests/fixtures/: __init__.py  factories.py  real_database.py  real_gpu.py  real_services.py  test_data.py  utils.py
tests/integration/: conftest.py.disabled  test_api_endpoints.py  test_celery_integration.py  test_directory_mirroring_e2e.py  test_embedding_service.py  test_mineru_integration.py  test_pdf_processing_pipeline.py  test_watcher_integration.py  test_watcher_task_queue_integration.py
tests/mcp/: test_config.py  test_context.py  test_server.py
tests/security/: test_integration_security_pipeline.py  test_path_traversal_prevention.py  test_sql_injection_prevention.py  test_worker_tasks_security.py
tests/unit/: test_api_models.py  test_api_models_comprehensive.py  test_api_versioning.py  test_architecture_boundaries.py  test_celery_config.py  test_celery_tasks.py  test_celery_tasks_comprehensive.py  test_config_endpoints.py  test_configuration_monitor.py  test_convert_endpoints.py  test_core_processor.py  test_database_models.py  test_db_queries.py  test_error_handling.py  test_error_handling_basic.py  test_health_api.py  test_mineru_service.py  test_monitoring.py  test_security.py  test_security_middleware.py  test_security_simple.py  test_server_sent_events.py  test_task_queue.py  test_watcher.py
tests/unit/core/: test_chunker.py  test_directory_mirroring.py
tests/unit/services/: test_batch_writer.py  test_embeddings.py  test_mineru_pool.py
tests/utils/: __init__.py  test_db_setup.py
